@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+08/05/02 russ
+
+	* added dGeomTransformSetInfo() and dGeomTransformGetInfo().
+
 07/13/02 russ
 
 	* added dBodySetForce(), dBodySetTorque(), dWorldImpulseToForce(),
